--- a/_includes/widgets/subscribe.html
+++ b/_includes/widgets/subscribe.html
@@ -1,4 +1,6 @@
 <div>
-	<h1>Subscribe:</h1>
+	{% assign subscribe = 'Subscribe' %}
+	{% if site.tSubscribe %}{% assign subscribe = site.tSubscribe %}{% endif %}
+	<h1>{{ subscribe }}:</h1>
 	<p class="rss-subscribe"><a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
 </div>
