--- a/_includes/widgets/recent-posts.html
+++ b/_includes/widgets/recent-posts.html
@@ -1,5 +1,7 @@
 <div>
-	<h1>Recent:</h1>
+	{% assign recent = 'Recent' %}
+	{% if site.tRecent %}{% assign recent = site.tRecent %}{% endif %}
+	<h1>{{ recent }}:</h1>
 	{% for post in site.posts %}
 		{% if for.index > site.number-of-recent-posts-in-widget %}{% break %}{% endif %}
 		<p><a href="{{ post.url }}">{% if post.date %}{{ post.date | date: "%F" }}{% endif %} {{ post.title }}</a></p>
