--- a/_includes/widgets/social-media.html
+++ b/_includes/widgets/social-media.html
@@ -1,5 +1,7 @@
 <div>
-	<h1>Social media & Resources:</h1>
+	{% assign message = 'Social Media & Resources' %}
+	{% if site.tSocialMediaResources %}{% assign message = site.tSocialMediaResources %}{% endif %}
+	<h1>{{ message }}:</h1>
 	{% if site.github_username %}
 		<div>{% include widgets/social-media-res/icon-github.html username=site.github_username %}</div>
 	{% endif %}
