--- a/_layouts/category-page.html
+++ b/_layouts/category-page.html
@@ -3,53 +3,49 @@ layout: default
 ---
 <article class="page">
 
+	{% assign category = 'Category' %}
+	{% if site.tCategory %}{% assign category = site.tCategory %}{% endif %}
 	<header class="page-header">
-		<h1 class="page-title">Categorie: {{ page.title | capitalize }}</h1>
+		<h1 class="page-title">{{ category }}: {{ page.title | capitalize }}</h1>
 	</header>
 
 	{% assign found = false %}
-
 	{% for post in site.posts %}
-	
 		{% if post.categories %}
-					
 			{% for cat in post.categories %}
-			
 				{% if cat == page.title %}
-				
 					{% assign found = true %}
-				
+
 					<div class="category-post">
-				
 						<h2 class="cp-header">
 							<span class="cph-title">{{ post.title }}</span>
 							<span class="post-meta">{{ post.date | date: "%F" }}</span>
 						</h2>
-					
+
 						{% if post.tags.size > 0 %}
-						<p class="post-tags">Tags: <span>
+						{% assign tags = 'Tags' %}
+						{% if site.tTags %}{% assign tags = site.tTags %}{% endif %}
+						<p class="post-tags">{{ tags }}: <span>
 							{% for tag in post.tags %}
 							{{ tag }}{% if tag != post.tags.last %}, {% endif %}
 							{% endfor %}</span>
 						</p>
 						{% endif %}
-						
-						<p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}<a href="{{ post.url }}">more...</a></p>
-					
+
+						{% assign more = 'more' %}
+						{% if site.tMore %}{% assign more = site.tMore %}{% endif %}
+						<p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}<a href="{{ post.url }}">{{ more }}...</a></p>
 					</div>
-				
+
 				{% endif %}
-			
 			{% endfor %}
-		
 		{% endif %}
-	
 	{% endfor %}
-			
+
 	{% if found == false %}
-			
-		<div><p style="text-align: center;">No blogposts found for this category</p></div>
-			
+		{% assign message = 'No blogposts found for this category' %}
+		{% if site.tNoBlogpostFound %}{% assign message = site.tNoBlogpostFound %}{% endif %}
+		<div><p style="text-align: center;">{{ message }}</p></div>
 	{% endif %}
 
 </article>
