--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -1,3 +1,6 @@
+<!-- The icon in the top-left side, content and size set through CSS3 -->
+<div class="navbanner-icon"></div>
+
 <!-- Title of the site is always visible -->
 <div class="navbanner-title">
 	<p>{{ site.title }}</p>
