--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 	{% include head.html %}
 	
-  	<body>
+  	<body class="body-panel">
   	
   		<div class="navbanner-panel">{% include navbanner.html %}</div>
 
