--- a/_sass/classic/_layout.scss
+++ b/_sass/classic/_layout.scss
@@ -75,7 +75,7 @@
 	@include narrow-layout {
 
 		// Disabled items.
-		.navbanner-menu, .nav-bottom-divider, input, .menu-item-separator, .wide-icon, .medium-icon { display: none; }
+		.navbanner-menu, .nav-bottom-divider, input, .menu-item-separator { display: none; }
 		
 		// Conditionally visible/invisible items (conditionally on the invisible checkbox, i.e. menu symbol)
 		input:checked ~ {
@@ -137,7 +137,7 @@
 	@include medium-layout {
 
 		// Disabled items
-		.navbanner-menu, input, .menu-item-symbol, .menu-subitem-symbol, .nav-bottom-divider, .wide-icon, .narrow-icon { display: none; }
+		.navbanner-menu, input, .menu-item-symbol, .menu-subitem-symbol, .nav-bottom-divider { display: none; }
 
 		// Conditionally visible/invisible items (conditionally on the invisible checkbox, i.e. menu symbol)
 		input:checked ~ {
@@ -199,8 +199,8 @@
 
 	@include wide-layout {
 
-		// Do not show the small butterfly icon, the short title, the checkbox label, the input(s) and the menu symbols
-		.navbanner-label, input, .menu-item-symbol, .menu-subitem-symbol, .medium-icon, .narrow-icon { display: none; }
+		// Do not show the checkbox label, the input(s) and the menu symbols
+		.navbanner-label, input, .menu-item-symbol { display: none; }
 		
 		.navbanner-menu {
 		
