--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -1,6 +1,6 @@
 <!-- Title of the site is always visible -->
 <div class="navbanner-title">
-	<p>{{ site.title }}</p>
+	<p class="site-title-text">{{ site.title }}</p>
 </div>
 
 <!-- The menu symbol will only be shown on narrow and medium layout -->
